# echo-miro

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: audio_manager.py  calculate_fps.py  echo_miro.py  get_emotion_from_frame.py  main.py  opencv_controller.py  realtime_voice_client.py  replace_background.py  test.py
